test cart product

--- a/test.html
+++ b/test.html
@@ -7,25 +7,9 @@
   <link rel="stylesheet" href="test.css">
 </head>
 <body>
-    <div class="container">
-        <div class="card">
-            <div class="slide slide1">
-                <div class="content">
-                    <div class="icon">
-                        <i class="fa fa-user-circle" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="slide slide2">
-                <div class="content">
-                    <h3>
-                        Hello there!
-                    </h3>
-                    <p>Trust yourself and keep going.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <div class="search-box">
+        <button class="btn-search"><i class="fas fa-search"></i></button>
+        <input type="text" class="input-search" placeholder="Type to Search...">
+      </div>
 </body>
 </html>
